# dcgp

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml  changelog.html  config.hpp.in  credits.html  dcgp-config.cmake.in  environment.yml  genindex.html  index.html  installation.html  main.cpp  objects.inv  paper.bib  paper.md  quickstart.html  search.html  searchindex.js  theory.html
_sources/: changelog.rst.txt  index.rst.txt  index.txt  installation.rst.txt  installation.txt  quickstart.rst.txt  theory.rst.txt
_static/: custom.css  documentation_options.js  my-styles.css
benchmark/: CMakeLists.txt  compute_bench.cpp  differentiate_bench.cpp  expression_ann.cpp  function_calls.cpp  loss_bench.cpp  mutate_bench.cpp  symbolic_regression.cpp  symbolic_regression_bench.cpp  vectorized_loss_bench.cpp
benchmarks/: CMakeLists.txt  profiling_differentiation.cpp  profiling_evaluations.cpp  profiling_mutation.cpp
cmake/: FindAudi.cmake  mpfr_check_version.cpp
cmake_modules/: DCGPFindBoost.cmake  FindAudi.cmake  FindGMP.cmake  FindMPFR.cmake  FindPiranha.cmake  FindSYMENGINE.cmake  FindTBB.cmake  mpfr.hpp  mpfr_check_version.cpp
cmake_scripts/: set_compiler_flags.cmake
dCGPy/: CMakeLists.txt  core.cpp
dcgpy/: CMakeLists.txt  __init__.py  _encode.py  _graphviz_visualize.py  _simplify.py  _subs_weights.py  _sympy_simplify.py  _version.py.in  _visualize.py  common_utils.hpp  core.cpp  docstrings.cpp  docstrings.hpp  expose_expressions.cpp  expose_expressions.hpp  expose_gdual.hpp  expose_kernels.cpp  expose_kernels.hpp  expose_symbolic_regression.cpp  expose_symbolic_regression.hpp  numpy.hpp  pybind11_function.hpp  python_includes.hpp  test.py
docs/: cpp_docs.html  expression.html  expression_ann.html  expression_weighted.html  index.html  kernel.html  kernel_set.html  python_docs.html
doxygen/: annotated.html  classdcgp_1_1expression-members.html  classdcgp_1_1expression.html  classdcgp_1_1expression__ann-members.html  classdcgp_1_1expression__ann.html  classdcgp_1_1expression__weighted-members.html  classdcgp_1_1expression__weighted.html  classdcgp_1_1kernel-members.html  classdcgp_1_1kernel.html  classdcgp_1_1kernel__set-members.html  classdcgp_1_1kernel__set.html  classes.html  dcgp_8hpp_source.html  dir_5c0a2d93f5ab1101ac39ed97c72cc03a.html  dir_d44c64559bbebec7f509842c48db8b23.html  expression_8hpp_source.html  expression__ann_8hpp_source.html  expression__weighted_8hpp_source.html  files.html  fitness__functions_8hpp_source.html  formula.repository  functions.html  functions_func.html  functions_rela.html  functions_type.html  group___managing.html  hierarchy.html  index.html  io_8hpp_source.html  kernel_8hpp_source.html  kernel__set_8hpp_source.html  menudata.js  modules.html  structis__gdual.html  structis__gdual_3_01audi_1_1gdual_3_01_t_01_4_01_4.html  type__traits_8hpp_source.html  wrapped__functions_8hpp_source.html
examples/: CMakeLists.txt  es4cgp.cpp  evolve_koza_quintic.cpp  finding_prime_integrals.ipynb  hamiltonian_kepler.cpp  hamiltonian_spring.cpp  hamiltonian_spring_mass.cpp  hamiltonian_spring_mass_lipson.cpp  learning_constants.ipynb  mes4cgp.cpp  moes4cgp.cpp  momes4cgp.cpp  solving_odes.ipynb  supervised_learning_data_set.cpp  supervised_learning_data_set_udp.cpp  supervised_learning_koza_quintic.cpp  symbolic_regression_1.cpp  symbolic_regression_1mo.cpp  symbolic_regression_2.cpp  symbolic_regression_2mo.cpp  symbolic_regression_3.cpp  symbolic_regression_4.cpp  symbolic_regression_back_prop.ipynb  tsoulos_nlode3.cpp  tsoulos_ode1.cpp  weighted_symbolic_regression.ipynb
examples/data/: chwirut1.data  chwirut2.data  daniel_wood.data  gauss1.data  gauss2.data  kirby2.data  lanczos3.data  misra1a.data  misra1b.data  pressure.data  symbolic.data
examples/detail/: es.hpp  read_data.hpp
include/: CMakeLists.txt  basis_function.hpp  dcgp.hpp  expression.hpp  expression_weighted.hpp  fitness_functions.hpp  function_set.hpp  io.hpp  kernel.hpp  kernel_set.hpp  type_traits.hpp  wrapped_functions.hpp
notebooks/: An_intro_to_dCGPANNs.html  custom_kernels.html  custom_kernels.ipynb  dCGPANN.html  dCGPANNs_for_classification.html  dCGPANNs_for_function_approximation.html  dCGPANNs_for_function_approximation.ipynb  evo_in_parallel.html  finding_prime_integrals.html  learning_constants.html  learning_constants2.html  learning_constants2.ipynb  moth_data.html  phenotype_correction_ex.html  real_world1.html  real_world2.html  real_world2.ipynb  real_world3.html  sandbox_regression.html  sandbox_regression2.html  (+7 more)
src/: CMakeLists.txt  basis_function.cpp  basis_function.h  basis_function.hpp  dcgp.cpp  dcgp.h  dcgp.hpp  encoding.cpp  encoding.h  exceptions.h  expression.cpp  expression.h  expression.hpp  fitness_functions.cpp  fitness_functions.h  fitness_functions.hpp  function_set.cpp  function_set.h  function_set.hpp  program.cpp  program.h  rng.cpp  rng.h  std_overloads.h  std_overloads.hpp  wrapped_functions.cpp  wrapped_functions.h  wrapped_functions.hpp
test/: CMakeLists.txt  es4cgp.cpp  expression.cpp  expression_ann.cpp  expression_weighted.cpp  function.cpp  gym.cpp  helpers.hpp  kernel.cpp  mes4cgp.cpp  moes4cgp.cpp  momes4cgp.cpp  symbolic_regression.cpp  wrapped_functions.cpp
tests/: CMakeLists.txt  check_bounds.cpp  compute.cpp  compute_perf.cpp  differentiate.cpp  differentiate_perf.cpp  differentiation.cpp  differentiation_perf.cpp  es4cgp.cpp  evaluation_perf.cpp  evolving_simple_expressions.cpp  expression.cpp  expression_ann.cpp  expression_ann_perf.cpp  function.cpp  function_calls_perf.cpp  gd4cgp.cpp  gym.cpp  helpers.hpp  kernel.cpp  loss_perf.cpp  mes4cgp.cpp  momes4cgp.cpp  mutate.cpp  mutate_perf.cpp  mutate_torture_test.cpp  mutation_perf.cpp  quadratic_error.cpp  rng.cpp  simple_data_fit.cpp  symbolic_regression.cpp  symbolic_regression_perf.cpp  test_automated_differentiation.cpp  test_compute.cpp  test_compute_f.cpp  test_evolving_simple_expressions.cpp  test_expression_fitness.cpp  test_program_fitness.cpp  test_simple_data_fit.cpp  test_torture_mutate.cpp  (+1 more)
(+275 files in other folders)
